--- a/android_app/app/src/main/res/values/strings.xml
+++ b/android_app/app/src/main/res/values/strings.xml
@@ -2,8 +2,9 @@
     <string name="app_name">Push Notification Demo</string>
     <string name="subOn">Unsubscribe to Push Notifications</string>
     <string name="subOff">Subscribe to Push Notifications</string>
-    <!--string name="noAppID">Please type your OneSignal app ID</string-->
-    <string name="noAppID">58a88e8b-83f1-429d-8863-8d8180ae83ed</string>
+    <!-- TODO: Remove my app id and insert generic text -->
+    <string name="noAppID">Please type your OneSignal app ID</string>
+    <!--string name="noAppID">58a88e8b-83f1-429d-8863-8d8180ae83ed</string-->
     <string name="noDev">Please select a local device</string>
     <string name="noDevSpinner">No devices available</string>
     <string name="clientName">PushDemoApp</string>
