--- a/firebase-ios/MessagingExample/Localizable.strings
+++ b/firebase-ios/MessagingExample/Localizable.strings
@@ -1,1 +1,2 @@
-"TEMP_WARNING" = "Warning! Temperature is %@ degrees, your house may be on fire!";
+"title_1" = "Temperature warning!";
+"body_1"  = "Temperature is %@ degrees, your house may be on fire!";
